--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.3",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.14",
     "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
@@ -26,7 +32,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
-    "tailwindcss": "^3.4.17",
     "vite": "^7.1.7"
   }
 }
