--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.9.3",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.14",
     "yup": "^1.7.1",
     "zustand": "^5.0.8"
@@ -28,6 +30,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
+    "baseline-browser-mapping": "^2.8.31",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
